@@ -2,6 +2,9 @@ Routes Changelog
 ========================
 
 -- 1.6.3 (**svn**)
+* Changed Routes generation and recognition to handle other 'special' URL chars
+  , . and ; as if they were /. This lets them be optionally left out of the
+  resulting generated URL. Feature requested by David Smith.
 * Fixed lookahead assertion in regexp builder to properly handle two grouped
   patterns in a row.
 * Applied patch to generation and matching to handle Unicode characters
